welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:11: error: value ==- is not a member of Int
      if (x==-1) {y=y+1;x=0} else {x=x+1;y=0}
           ^Diagonal:14: error: value ==- is not a member of Int
    if (x==-1) {y=y-1;x=0} else {x=x-1;y=0}
         ^Diagonal:32: error: value ==- is not a member of Int
  return ((x==x2)||(y==y2)||(x==-1)||(y==-1))
                              ^Diagonal:32: error: value ==- is not a member of Int
  return ((x==x2)||(y==y2)||(x==-1)||(y==-1))
                                       ^